# whiteboard-stitch

./: .gitignore  CLAUDE.md  api.py  app.py  bundle.py  deepzoom.py  icon.icns  library.py  main.py  pipeline.py  pyproject.toml  sphomography.py  spimage.py  spprofile.py  stitch-cli.py  stitching.py
frontend/: app.js  index.html  style.css
